@@ -3,6 +3,8 @@
 * segway: add window.bed output to cross reference window index to chromomsome
   region
 * segway: add instance specific job log files to avoid log overwrites
+* segway: update support for versions of numpy > 1.14 by adding legacy scalar
+  and vector text printing
 
 2.0.1:
 * segway: fix training results not being parsed properly due to validation
